aspire/Zortracks.PsInfo.AppHost/aspirate-output/application/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
spec:
  minReadySeconds: 60
  replicas: 1
  selector:
    matchLabels:
      app: application
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: application
    spec:
      imagePullSecrets:
      - name: image-pull-secret
      containers:
      - name: application
        image: registry.versonium.cloud/ps-info/application:v0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
      terminationGracePeriodSeconds: 180
