aspire/Zortracks.PsInfo.AppHost/aspirate-output/application/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  type: ClusterIP
  selector:
    app: application
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
