aspire/Zortracks.PsInfo.AppHost/aspirate-output/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - secretName: secret-tls-application
    hosts:
    - ps-info.ddns.net
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: application
            port:
              number: 8080
